objects/Auto_Product_Config__c/fields/Heat_Sounder_Other__c.field-meta.xml
<CustomField>
    <fullName>Heat_Sounder_Other__c</fullName>
    <label>Heat Sounder Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>