objects/Auto_Product_Config__c/fields/Heat_Sounder_Rafiki__c.field-meta.xml
<CustomField>
    <fullName>Heat_Sounder_Rafiki__c</fullName>
    <label>Heat Sounder Rafiki</label>
    <length>20</length>
    <type>Text</type>
</CustomField>