objects/Auto_Product_Config__c/fields/Heat_Sounder_Ziton__c.field-meta.xml
<CustomField>
    <fullName>Heat_Sounder_Ziton__c</fullName>
    <label>Heat Sounder Ziton</label>
    <length>20</length>
    <type>Text</type>
</CustomField>