objects/Auto_Product_Config__c/fields/Hecon_Outlet_Head__c.field-meta.xml
<CustomField>
    <fullName>Hecon_Outlet_Head__c</fullName>
    <label>Decon Outlet Head</label>
    <length>20</length>
    <type>Text</type>
</CustomField>