objects/Auto_Product_Config__c/fields/Housingsp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Housingsp_Qty__c</fullName>
    <label>Housing Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>