objects/Auto_Product_Config__c/fields/HYD_Georgian_Wired_Glass__c.field-meta.xml
<CustomField>
    <fullName>HYD_Georgian_Wired_Glass__c</fullName>
    <label>Georgian Wired Glass</label>
    <length>20</length>
    <type>Text</type>
</CustomField>