objects/Auto_Product_Config__c/fields/HYD_LCI_Leather_Strap__c.field-meta.xml
<CustomField>
    <fullName>HYD_LCI_Leather_Strap__c</fullName>
    <label>LCI Leather Strap</label>
    <length>20</length>
    <type>Text</type>
</CustomField>