objects/Auto_Product_Config__c/fields/HYD_Outlet_Sign_BS5499__c.field-meta.xml
<CustomField>
    <fullName>HYD_Outlet_Sign_BS5499__c</fullName>
    <label>Outlet Sign BS5499</label>
    <length>20</length>
    <type>Text</type>
</CustomField>