objects/Auto_Product_Config__c/fields/HYD_Outlet_Valve_Blank_Dust_Cap__c.field-meta.xml
<CustomField>
    <fullName>HYD_Outlet_Valve_Blank_Dust_Cap__c</fullName>
    <label>Outlet Valve Blank Dust Cap</label>
    <length>20</length>
    <type>Text</type>
</CustomField>