objects/Auto_Product_Config__c/fields/HYD_Valve_Sealing_Units_64mm__c.field-meta.xml
<CustomField>
    <fullName>HYD_Valve_Sealing_Units_64mm__c</fullName>
    <label>Valve Sealing Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>