objects/Auto_Product_Config__c/fields/Hydrant_Cover_Respray__c.field-meta.xml
<CustomField>
    <fullName>Hydrant_Cover_Respray__c</fullName>
    <label>Hydrant Cover Respray</label>
    <length>15</length>
    <type>Text</type>
</CustomField>