objects/Auto_Product_Config__c/fields/Hydrant_Marker_Numbers_Qty__c.field-meta.xml
<CustomField>
    <fullName>Hydrant_Marker_Numbers_Qty__c</fullName>
    <label>Hydrant Marker Numbers</label>
    <length>20</length>
    <type>Text</type>
</CustomField>