objects/Auto_Product_Config__c/fields/Inlet_Sign__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Sign__c</fullName>
    <label>Inlet Sign</label>
    <length>20</length>
    <type>Text</type>
</CustomField>