objects/Auto_Product_Config__c/fields/Inlet_Valve_Blank_Dust_Cap__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Valve_Blank_Dust_Cap__c</fullName>
    <label>Inlet Valve Blank Dust Cap</label>
    <length>20</length>
    <type>Text</type>
</CustomField>