objects/Auto_Product_Config__c/fields/Interlink_Integrity_Qty__c.field-meta.xml
<CustomField>
    <fullName>Interlink_Integrity_Qty__c</fullName>
    <label>Interlink Integrity Qty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>