objects/Auto_Product_Config__c/fields/Kettle_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Kettle_Replacement__c</fullName>
    <label>Kettle Replacement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>