objects/Auto_Product_Config__c/fields/LCI_Leather_Strap__c.field-meta.xml
<CustomField>
    <fullName>LCI_Leather_Strap__c</fullName>
    <label>LCI Leather Strap</label>
    <length>15</length>
    <type>Text</type>
</CustomField>