objects/Auto_Product_Config__c/fields/Lead_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Lead_Replacement__c</fullName>
    <label>Lead Replacement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>