objects/Auto_Product_Config__c/fields/Light_Emitting_Diode_Emergency_Light__c.field-meta.xml
<CustomField>
    <fullName>Light_Emitting_Diode_Emergency_Light__c</fullName>
    <label>Light Emitting Diode Emergency Light</label>
    <length>20</length>
    <type>Text</type>
</CustomField>