objects/Auto_Product_Config__c/fields/Log_Book_Supplied_Qty__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Supplied_Qty__c</fullName>
    <label>Log Book Supplied - Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>