objects/Auto_Product_Config__c/fields/Lubrication_Grease__c.field-meta.xml
<CustomField>
    <fullName>Lubrication_Grease__c</fullName>
    <label>Lubrication / Grease</label>
    <length>15</length>
    <type>Text</type>
</CustomField>