objects/Auto_Product_Config__c/fields/Maglocksp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Maglocksp_Qty__c</fullName>
    <label>Maglock Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>