objects/Auto_Product_Config__c/fields/Main_Body_Pressure_Seal__c.field-meta.xml
<CustomField>
    <fullName>Main_Body_Pressure_Seal__c</fullName>
    <label>Main Body Pressure Seal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>