objects/Auto_Product_Config__c/fields/Maintenance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Charge__c</fullName>
    <label>Maintenance Charge</label>
    <length>20</length>
    <type>Text</type>
</CustomField>