objects/Auto_Product_Config__c/fields/Mechanical_Friction_Inhib_Qty__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Friction_Inhib_Qty__c</fullName>
    <label>Mechanical Friction Inhib. Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>