objects/Auto_Product_Config__c/fields/Microwave_Leakage_Detection__c.field-meta.xml
<CustomField>
    <fullName>Microwave_Leakage_Detection__c</fullName>
    <label>Microwave Leakage Detection</label>
    <length>15</length>
    <type>Text</type>
</CustomField>