objects/Auto_Product_Config__c/fields/MSS_Spare_Parts_Other__c.field-meta.xml
<CustomField>
    <fullName>MSS_Spare_Parts_Other__c</fullName>
    <description>Mechanical service sheet spare parts Other Product Code</description>
    <label>MSS Spare Parts Other</label>
    <length>15</length>
    <type>Text</type>
</CustomField>