objects/Auto_Product_Config__c/fields/NiCad_Cells_1_cell__c.field-meta.xml
<CustomField>
    <fullName>NiCad_Cells_1_cell__c</fullName>
    <label>NiCad Cells 1 cell</label>
    <length>15</length>
    <type>Text</type>
</CustomField>