objects/Auto_Product_Config__c/fields/NiCad_Cells_2_cell_replacement__c.field-meta.xml
<CustomField>
    <fullName>NiCad_Cells_2_cell_replacement__c</fullName>
    <label>NiCad Cells- 2 cell replacement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>