objects/Auto_Product_Config__c/fields/NiCad_Cells_Other__c.field-meta.xml
<CustomField>
    <fullName>NiCad_Cells_Other__c</fullName>
    <label>NiCad Cells Other</label>
    <length>15</length>
    <type>Text</type>
</CustomField>