objects/Auto_Product_Config__c/fields/Nurse_Call_Disabled_Alarm_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Call_Disabled_Alarm_Maintenance__c</fullName>
    <label>Nurse Call / Disabled Alarm Maintenance</label>
    <length>15</length>
    <type>Text</type>
</CustomField>