objects/Auto_Product_Config__c/fields/Nursecall_Call_Point_Reset_Pad__c.field-meta.xml
<CustomField>
    <fullName>Nursecall_Call_Point_Reset_Pad__c</fullName>
    <label>Nursecall Call Point / Reset Pad</label>
    <length>15</length>
    <type>Text</type>
</CustomField>