objects/Auto_Product_Config__c/fields/Nursecall_Monitoring_Station__c.field-meta.xml
<CustomField>
    <fullName>Nursecall_Monitoring_Station__c</fullName>
    <label>Nursecall Monitoring Station</label>
    <length>15</length>
    <type>Text</type>
</CustomField>