objects/Auto_Product_Config__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>15</length>
    <type>Text</type>
</CustomField>