objects/Auto_Product_Config__c/fields/Other_Parts__c.field-meta.xml
<CustomField>
    <fullName>Other_Parts__c</fullName>
    <label>Other Parts</label>
    <length>20</length>
    <type>Text</type>
</CustomField>