objects/Auto_Product_Config__c/fields/Othersp__c.field-meta.xml
<CustomField>
    <fullName>Othersp__c</fullName>
    <label>Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>