objects/Auto_Product_Config__c/fields/Outlet_sign_BS5499__c.field-meta.xml
<CustomField>
    <fullName>Outlet_sign_BS5499__c</fullName>
    <label>Outlet sign BS5499</label>
    <length>15</length>
    <type>Text</type>
</CustomField>