objects/Auto_Product_Config__c/fields/Periodic_Circuit_Testing__c.field-meta.xml
<CustomField>
    <fullName>Periodic_Circuit_Testing__c</fullName>
    <label>Periodic Circuit Testing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>