objects/Auto_Product_Config__c/fields/PI_Calibration__c.field-meta.xml
<CustomField>
    <fullName>PI_Calibration__c</fullName>
    <label>PI Calibration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>