objects/Auto_Product_Config__c/fields/Pipe_Sealant_Clamp__c.field-meta.xml
<CustomField>
    <fullName>Pipe_Sealant_Clamp__c</fullName>
    <label>Pipe Sealant Clamp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>