objects/Auto_Product_Config__c/fields/PIR_Qty__c.field-meta.xml
<CustomField>
    <fullName>PIR_Qty__c</fullName>
    <label>PIR Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>