objects/Auto_Product_Config__c/fields/PIR_Qty_Range_above_100m__c.field-meta.xml
<CustomField>
    <fullName>PIR_Qty_Range_above_100m__c</fullName>
    <label>PIR Qty Range above 100m</label>
    <length>20</length>
    <type>Text</type>
</CustomField>