objects/Auto_Product_Config__c/fields/Plug_Connection_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Plug_Connection_Replacement__c</fullName>
    <label>Plug Connection Replacement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>