objects/Auto_Product_Config__c/fields/Portable_Appliance_Testing__c.field-meta.xml
<CustomField>
    <fullName>Portable_Appliance_Testing__c</fullName>
    <label>Portable Appliance Testing</label>
    <length>15</length>
    <type>Text</type>
</CustomField>