objects/Auto_Product_Config__c/fields/Portable_Appliance_Testing_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Portable_Appliance_Testing_Quantity__c</fullName>
    <label>Portable Appliance Testing Quantity</label>
    <length>15</length>
    <type>Text</type>
</CustomField>