objects/Auto_Product_Config__c/fields/Proxi_Card_Qty__c.field-meta.xml
<CustomField>
    <fullName>Proxi_Card_Qty__c</fullName>
    <label>Proxi Card Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>