objects/Auto_Product_Config__c/fields/Proxi_Readersp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Proxi_Readersp_Qty__c</fullName>
    <label>Proxi Reader Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>