objects/Auto_Product_Config__c/fields/Pump_Room_Signs__c.field-meta.xml
<CustomField>
    <fullName>Pump_Room_Signs__c</fullName>
    <label>Pump Room Signs</label>
    <length>20</length>
    <type>Text</type>
</CustomField>