objects/Auto_Product_Config__c/fields/Radioactive_Disposal_Qty__c.field-meta.xml
<CustomField>
    <fullName>Radioactive_Disposal_Qty__c</fullName>
    <label>Radioactive Disposal Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>