objects/Auto_Product_Config__c/fields/Releasesp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Releasesp_Qty__c</fullName>
    <label>Release Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>