objects/Auto_Product_Config__c/fields/Replacement_Gasket__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Gasket__c</fullName>
    <label>Replacement Gasket</label>
    <length>20</length>
    <type>Text</type>
</CustomField>