objects/Auto_Product_Config__c/fields/Replacement_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Gauge__c</fullName>
    <label>Replacement Gauge</label>
    <length>20</length>
    <type>Text</type>
</CustomField>