objects/Auto_Product_Config__c/fields/Rubber_Nozzle_Caps__c.field-meta.xml
<CustomField>
    <fullName>Rubber_Nozzle_Caps__c</fullName>
    <label>Rubber Nozzle Caps</label>
    <length>50</length>
    <type>Text</type>
</CustomField>