objects/Auto_Product_Config__c/fields/Service_of_Hydrant_System__c.field-meta.xml
<CustomField>
    <fullName>Service_of_Hydrant_System__c</fullName>
    <label>Service of Hydrant System</label>
    <length>15</length>
    <type>Text</type>
</CustomField>