objects/Auto_Product_Config__c/fields/Service_Suppression_Fire_Systems__c.field-meta.xml
<CustomField>
    <fullName>Service_Suppression_Fire_Systems__c</fullName>
    <label>Service - Suppression Fire Systems</label>
    <length>15</length>
    <type>Text</type>
</CustomField>