objects/Auto_Product_Config__c/fields/SLA_12v_2_1_ah_replacement__c.field-meta.xml
<CustomField>
    <fullName>SLA_12v_2_1_ah_replacement__c</fullName>
    <label>SLA 12v 2.1 ah replacement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>