objects/Auto_Product_Config__c/fields/SLA_Battery_EDA__c.field-meta.xml
<CustomField>
    <fullName>SLA_Battery_EDA__c</fullName>
    <label>SLA Battery EDA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>