objects/Auto_Product_Config__c/fields/SLA_Battery_EMS__c.field-meta.xml
<CustomField>
    <fullName>SLA_Battery_EMS__c</fullName>
    <label>SLA Battery EMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>