objects/Auto_Product_Config__c/fields/SLA_Batterysp__c.field-meta.xml
<CustomField>
    <fullName>SLA_Batterysp__c</fullName>
    <label>SLA Battery</label>
    <length>20</length>
    <type>Text</type>
</CustomField>