objects/Auto_Product_Config__c/fields/SLA_Interconnection_Qty__c.field-meta.xml
<CustomField>
    <fullName>SLA_Interconnection_Qty__c</fullName>
    <label>SLA Interconnection Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>