objects/Auto_Product_Config__c/fields/SLA_Power_Calibration_Qty__c.field-meta.xml
<CustomField>
    <fullName>SLA_Power_Calibration_Qty__c</fullName>
    <label>SLA Power Calibration Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>