objects/Auto_Product_Config__c/fields/SLA_Term_Set_Decon_Qty__c.field-meta.xml
<CustomField>
    <fullName>SLA_Term_Set_Decon_Qty__c</fullName>
    <label>SLA Term Set Decon Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>