objects/Auto_Product_Config__c/fields/Small_Works_Carried_Out__c.field-meta.xml
<CustomField>
    <fullName>Small_Works_Carried_Out__c</fullName>
    <label>Small Works Carried Out</label>
    <length>25</length>
    <type>Text</type>
</CustomField>