objects/Auto_Product_Config__c/fields/Smoke_Detector_Apollo_S65__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Detector_Apollo_S65__c</fullName>
    <label>Smoke Detector Apollo S65</label>
    <length>20</length>
    <type>Text</type>
</CustomField>