objects/Auto_Product_Config__c/fields/Smoke_Detector_EMS__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Detector_EMS__c</fullName>
    <label>Smoke Detector_EMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>