objects/Auto_Product_Config__c/fields/Smoke_Detector_Gent__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Detector_Gent__c</fullName>
    <label>Smoke Detector Gent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>