objects/Auto_Product_Config__c/fields/Smoke_Detector_Hochiki__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Detector_Hochiki__c</fullName>
    <label>Smoke Detector_Hochiki</label>
    <length>20</length>
    <type>Text</type>
</CustomField>