objects/Auto_Product_Config__c/fields/Smoke_Detector_Nittan__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Detector_Nittan__c</fullName>
    <label>Smoke Detector Nittan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>