objects/Auto_Product_Config__c/fields/Smoke_Detector_Other__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Detector_Other__c</fullName>
    <label>Smoke Detector Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>