objects/Auto_Product_Config__c/fields/Smoke_Sounder_Apollo_S65__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Sounder_Apollo_S65__c</fullName>
    <label>Smoke Sounder Apollo S65</label>
    <length>20</length>
    <type>Text</type>
</CustomField>