objects/Auto_Product_Config__c/fields/Smoke_Sounder_Apollo_XP95__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Sounder_Apollo_XP95__c</fullName>
    <label>Smoke Sounder Apollo XP95</label>
    <length>20</length>
    <type>Text</type>
</CustomField>