objects/Auto_Product_Config__c/fields/Smoke_Sounder_Hochiki__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Sounder_Hochiki__c</fullName>
    <label>Smoke Sounder Hochiki</label>
    <length>20</length>
    <type>Text</type>
</CustomField>