objects/Auto_Product_Config__c/fields/Smoke_Sounder_Protec__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Sounder_Protec__c</fullName>
    <label>Smoke Sounder Protec</label>
    <length>20</length>
    <type>Text</type>
</CustomField>