objects/Auto_Product_Config__c/fields/Smoke_Vent_Curtain_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Vent_Curtain_Maintenance__c</fullName>
    <label>Smoke Vent / Curtain Maintenance</label>
    <length>15</length>
    <type>Text</type>
</CustomField>