objects/Auto_Product_Config__c/fields/Solenoid_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Solenoid_Calibration__c</fullName>
    <label>Solenoid Calibration</label>
    <length>25</length>
    <type>Text</type>
</CustomField>