objects/Auto_Product_Config__c/fields/Solenoid_Calibration_Gas__c.field-meta.xml
<CustomField>
    <fullName>Solenoid_Calibration_Gas__c</fullName>
    <label>Solenoid Calibration Gas</label>
    <length>15</length>
    <type>Text</type>
</CustomField>