objects/Auto_Product_Config__c/fields/Sounder_Beacon_24v_Replacement_Hochiki__c.field-meta.xml
<CustomField>
    <fullName>Sounder_Beacon_24v_Replacement_Hochiki__c</fullName>
    <label>Sounder Beacon 24v Replacement Hochiki</label>
    <length>20</length>
    <type>Text</type>
</CustomField>