objects/Auto_Product_Config__c/fields/Sounder_Beacon_ApolloS65__c.field-meta.xml
<CustomField>
    <fullName>Sounder_Beacon_ApolloS65__c</fullName>
    <label>Sounder Beacon 24v Replacement Apollo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>