objects/Auto_Product_Config__c/fields/Sounder_Beacon_ApolloXP95__c.field-meta.xml
<CustomField>
    <fullName>Sounder_Beacon_ApolloXP95__c</fullName>
    <label>Sounder Beacon 24v Replacement Apollo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>