objects/Auto_Product_Config__c/fields/Stainless_Steel_Nozzle_Caps__c.field-meta.xml
<CustomField>
    <fullName>Stainless_Steel_Nozzle_Caps__c</fullName>
    <label>Stainless Steel Nozzle Caps</label>
    <length>50</length>
    <type>Text</type>
</CustomField>