objects/Auto_Product_Config__c/fields/Suppression_Sprinkler_Outlet_Head__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Sprinkler_Outlet_Head__c</fullName>
    <label>Suppression/Sprinkler Outlet Head</label>
    <length>50</length>
    <type>Text</type>
</CustomField>