objects/Auto_Product_Config__c/fields/Terminal_Set_Decon__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Set_Decon__c</fullName>
    <label>Terminal Set Decon</label>
    <length>25</length>
    <type>Text</type>
</CustomField>