objects/Auto_Product_Config__c/fields/Test_Keys_Qty__c.field-meta.xml
<CustomField>
    <fullName>Test_Keys_Qty__c</fullName>
    <label>Test Keys Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>