objects/Auto_Product_Config__c/fields/Toaster_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Toaster_Replacement__c</fullName>
    <label>Toaster Replacement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>